public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/2045/source/compile
source.c: In function ‘main’:
source.c:13:8: warning: implicit declaration of function ‘prinf’ [-Wimplicit-function-declaration]
        prinf("%d",i);
        ^
source.c:17:8: error: expected ‘}’ before ‘else’
        else
        ^
source.c: At top level:
source.c:21:8: error: expected identifier or ‘(’ before ‘return’
        return 0;
        ^
source.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
